Edit Invoice and paymnetTermName

--- a/ProjectManagement/Views/Invoices/NewInvoice.cshtml
+++ b/ProjectManagement/Views/Invoices/NewInvoice.cshtml
@@ -14,10 +14,9 @@
 
                 for (var payment of payments) {
                     debugger;
-                    //payment.invoicePaymentTerms;
                         $('#paymentSelect').append($('<option>', {
                             value: payment.id,
-                            text: payment.name
+                            text: payment.deliverable.name + "-" + payment.name
                         }));
                 }
             },
