--- a/ProjectManagement/Views/Deliverables/Index.cshtml
+++ b/ProjectManagement/Views/Deliverables/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using PMISBLayer.Entities
 @model Project
 
-<a class="btn btn-primary" asp-controller="Deliverable" asp-action="NewDeliverable" asp-route-projectId="@Model.Id" >Create Deliverable</a>
+<a class="btn btn-primary" asp-controller="Deliverables" asp-action="NewDeliverable" asp-route-projectId="@Model.Id" >Create Deliverable</a>
 
 <br />
 <br />
@@ -23,9 +23,9 @@
                     <td>@deliverable.StartDate</td>
                     <td>@deliverable.EndDate</td>
                     <td>@deliverable.ProjectPhase.Phase.Name</td>
-                    <td><a class="btn btn-info" asp-controller="Deliverable" asp-action="EditDeliverable" asp-route-deliverableId="@deliverable.Id">Edit</a></td>
-                    <td><a class="btn btn-danger" asp-controller="Deliverable" asp-action="DeleteDeliverable" asp-route-deliverableId="@deliverable.Id"  asp-route-projectId="@Model.Id">Delete</a></td>
-                    <td><a class="btn btn-info" asp-controller="PaymentTerm" asp-action="Index" asp-route-deliverableId="@deliverable.Id" >Payment Terms</a></td>
+                    <td><a class="btn btn-info" asp-controller="Deliverables" asp-action="EditDeliverable" asp-route-deliverableId="@deliverable.Id">Edit</a></td>
+                    <td><a class="btn btn-danger" asp-controller="Deliverables" asp-action="DeleteDeliverable" asp-route-deliverableId="@deliverable.Id"  asp-route-projectId="@Model.Id">Delete</a></td>
+                    <td><a class="btn btn-info" asp-controller="PaymentTerms" asp-action="Index" asp-route-deliverableId="@deliverable.Id" >Payment Terms</a></td>
 
                 </tr>
             }
