--- a/ProjectManagement/Views/Projects/NewProject.cshtml
+++ b/ProjectManagement/Views/Projects/NewProject.cshtml
@@ -8,7 +8,7 @@
   } );
 </script>
 
-<form asp-controller="Project" asp-action="CreateProject" method="post" enctype="multipart/form-data">
+<form asp-controller="Projects" asp-action="CreateProject" method="post" enctype="multipart/form-data">
     <div class="form-group">
         <label>Enter Project Name:</label>
         <input asp-for="Name" type="text" class="form-control">
