--- a/ProjectManagement/Views/ProjectsPhases/EditProjectPhase.cshtml
+++ b/ProjectManagement/Views/ProjectsPhases/EditProjectPhase.cshtml
@@ -8,7 +8,7 @@
   } );
 </script>
 
-<form asp-controller="ProjectPhase" asp-action="UpdateProjectPhase" method="post">
+<form asp-controller="ProjectsPhases" asp-action="UpdateProjectPhase" method="post">
     <div>
         <input asp-for="Id" value="@Model.Id" style="display:none;" />
         <label>Choose Project Name:</label>
