--- a/ProjectManagement/Views/Shared/_Layout.cshtml
+++ b/ProjectManagement/Views/Shared/_Layout.cshtml
@@ -63,25 +63,25 @@
                         </a>
                     </li>
                     <li>
-                        <a class="nav-link" asp-controller="Project" asp-action="Index">
+                        <a class="nav-link" asp-controller="Projects" asp-action="Index">
                             <i class="nc-icon nc-circle-09"></i>
                             <p>Projects</p>
                         </a>
                     </li>
                     <li>
-                        <a class="nav-link" asp-controller="ProjectPhase" asp-action="Index">
+                        <a class="nav-link" asp-controller="ProjectsPhases" asp-action="Index">
                             <i class="nc-icon nc-notes"></i>
                             <p>ProjectsPhases</p>
                         </a>
                     </li>
                     <li>
-                        <a class="nav-link" asp-controller="PaymentTerm" asp-action="AllPayments">
+                        <a class="nav-link" asp-controller="PaymentTerms" asp-action="AllPayments">
                             <i class="nc-icon nc-paper-2"></i>
                             <p>All paymentTerms</p>
                         </a>
                     </li>
                     <li>
-                        <a class="nav-link" asp-controller="Deliverable" asp-action="AllDeliverables">
+                        <a class="nav-link" asp-controller="Deliverables" asp-action="AllDeliverables">
                             <i class="nc-icon nc-atom"></i>
                             <p>All Deliverables</p>
                         </a>
@@ -90,6 +90,12 @@
                         <a class="nav-link" asp-controller="Invoices" asp-action="Index">
                             <i class="nc-icon nc-pin-3"></i>
                             <p>Invoices</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="nav-link" asp-controller="Clients" asp-action="Index">
+                            <i class="nc-icon nc-pin-3"></i>
+                            <p>Clients</p>
                         </a>
                     </li>
                 </ul>
