--- a/ProjectManagement/Views/Deliverables/NewDeliverable.cshtml
+++ b/ProjectManagement/Views/Deliverables/NewDeliverable.cshtml
@@ -8,7 +8,7 @@
   } );
 </script>
 
-<form asp-controller="Deliverable" asp-action="CreateDeliverable" method="post">
+<form asp-controller="Deliverables" asp-action="CreateDeliverable" method="post">
     <input name="projectId" value="@ViewBag.project.Id" style="display:none;" />
     <div class="form-group">
         <label>Enter deliverable Name:</label>
