--- a/ProjectManagement/Views/PaymentTerms/NewPaymentTerm.cshtml
+++ b/ProjectManagement/Views/PaymentTerms/NewPaymentTerm.cshtml
@@ -1,7 +1,7 @@
 ﻿@using PMISBLayer.Entities
 @model PaymentTerm
 
-<form asp-controller="PaymentTerm" asp-action="CreatePaymentTerm" method="post">
+<form asp-controller="PaymentTerms" asp-action="CreatePaymentTerm" method="post">
     <input name="DeliverableId" value="@Model.DeliverableId" style="display:none;" />
     <div class="form-group">
         <label>Enter PaymentTerm Name:</label>
