--- a/ProjectManagement/Views/Invoices/ViewInvoice.cshtml
+++ b/ProjectManagement/Views/Invoices/ViewInvoice.cshtml
@@ -1,7 +1,6 @@
 ﻿@using PMISBLayer.Entities
 @model Invoice
 <script>
-
     function GetInvoice() {
         var Id = $("#Id").val();
         $.ajax({
@@ -11,24 +10,24 @@
             traditional: true,
             success: function (invoice) {
                 debugger;
+                var clientName = invoice.project.client.name;
+                var clientEmail = invoice.project.client.email;
+                var projectName = invoice.project.name;
+                $("#invoiceName").append(invoice.title)
                 $("#invoiceId").append(invoice.id)
                 $("#invoiceDate").append(invoice.date)
+                $("#clientName").append("<span  class='text - 600 text - 110 text - blue align - middle'>" + clientName + "</span >");
+                $("#clientEmail").append(clientEmail);
+                $("#projectName").append(projectName);
                 for (var invoicePayment of invoice.invoicePaymentTerms) {
-                    var clientName = invoicePayment.paymentTerm.deliverable.projectPhase.project.client.name;
                     var paymentName = invoicePayment.paymentTerm.name;
                     var paymentAmount = invoicePayment.paymentTerm.amount;
                     var dName = invoicePayment.paymentTerm.deliverable.name;
-                    $("#clientName").append("<span  class='text - 600 text - 110 text - blue align - middle'>" + clientName + "</span >");
-                    $("#clientEmail").append(invoicePayment.paymentTerm.deliverable.projectPhase.project.client.email);
-                    $("#projectName").append(invoicePayment.paymentTerm.deliverable.projectPhase.project.name);
-
                     $("#Table").append(" <div  class='row mb - 2 mb - sm - 0 py - 25'><div class='d-none d-sm-block col-1'>" + paymentName +
                         "</div>" +
                         "<div class='col-9 col-sm-5'>" + paymentAmount + "</div>" +
                         "<div class='d-none d-sm-block col-2'>" + dName + "</div> </div >"
                         );
-                   
-
                 }
             },
             error: function () {
@@ -186,9 +185,9 @@
     <div class="page-header text-blue-d2">
         <h1 class="page-title text-secondary-d1">
             Invoice
-            <small class="page-info">
+            <small id="invoiceName" class="page-info">
                 <i class="fa fa-angle-double-right text-80"></i>
-                ID: #111-222
+               
             </small>
         </h1>
 
@@ -254,6 +253,7 @@
                 </div>
                 <!--invoice detalis-->
                 <div class="mt-4">
+                    <!--cloumn names:-->
                     <div class="row text-600 text-white bgc-default-tp1 py-25">
                         <div class="d-none d-sm-block col-1">Payment Name</div>
                         <div class="col-9 col-sm-5">Amount</div>
@@ -261,39 +261,11 @@
                     </div>
 
                     <div id="Table" class="text-95 text-secondary-d3">
-                        @*<div id="row" class="row mb-2 mb-sm-0 py-25">  
-                            <div class='d-none d-sm-block col-1'></div>
-                            <div  class='col-9 col-sm-5'></div>
-                            <div  class='d-none d-sm-block col-2'></div>
-                        </div>*@
-
+                        <!--get data from api-->
                     </div>
 
                     <div class="row border-b-2 brc-default-l2"></div>
-
-                    <!-- or use a table instead -->
-                    <!--<div class="table-responsive">
-                        <table class="table table-striped table-borderless border-0 border-b-2 brc-default-l1">
-                            <thead class="bg-none bgc-default-tp1">
-                                <tr class="text-white">
-                                    <th class="opacity-2">Payment Name</th>
-                                    <th>Amount</th>
-                                    <th>Deliverable Name</th>
-
-                                </tr>
-                            </thead>
-
-                            <tbody class="text-95 text-secondary-d3">
-                                <tr>
-                                </tr>
-
-                            </tbody>
-                        </table>
-                    </div>-->
-
-
                     <div class="row mt-3">
-
                         <div class="row my-2 align-items-center bgc-primary-l3 p-2">
                             <div class="col-7 text-right">
                                 Total Amount
@@ -304,10 +276,7 @@
                         </div>
                     </div>
                 </div>
-
                 <hr />
-
-
             </div>
         </div>
     </div>
