Add simple validtion

--- a/ProjectManagement/Views/Invoices/NewInvoice.cshtml
+++ b/ProjectManagement/Views/Invoices/NewInvoice.cshtml
@@ -50,6 +50,7 @@
             }
 
         </select>
+        <span asp-validation-for="ProjectId" style="color: red;"></span>
     </div>
     <div>
         <label>Choose payment Terms:</label>
