--- a/ProjectManagement/Views/Shared/_Layout.cshtml
+++ b/ProjectManagement/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
 <html lang="en">
 
 <head>
+
     <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="/resources/demos/style.css">
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
@@ -38,6 +39,9 @@
     <link href="~/assets/css/light-bootstrap-dashboard.css?v=2.0.0 " rel="stylesheet" />
     <!-- CSS Just for demo purpose, don't include it in your project -->
     <link href="~/assets/css/demo.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.css">
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.js"></script>
+
 
 </head>
 
