--- a/ProjectManagement/Views/PaymentTerms/Index.cshtml
+++ b/ProjectManagement/Views/PaymentTerms/Index.cshtml
@@ -1,14 +1,22 @@
 ﻿@using PMISBLayer.Entities
 @model List<PaymentTerm>
-  <a class="btn btn-primary" asp-controller="PaymentTerms" asp-action="NewPaymentTerm">Create Payment Term</a>
+
+    <script>
+        $(document).ready(function () {
+            $('#paymentTerms').DataTable();
+        });
+    </script>
+    <a class="btn btn-primary" asp-controller="PaymentTerms" asp-action="NewPaymentTerm">Create Payment Term</a>
     <br />
     <br />
-    <table class="table table-striped">
+    <table id="paymentTerms" class="table table-striped">
         <thead>
             <tr>
                 <th>Payment Term Name</th>
                 <th>Project Name</th>
                 <th>Payment Amount</th>
+                <th></th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
