Edit Client Class and fix front end bugs

--- a/ProjectManagement/Views/Clients/EditClient.cshtml
+++ b/ProjectManagement/Views/Clients/EditClient.cshtml
@@ -3,7 +3,7 @@
 
 <form asp-controller="Clients" asp-action="UpdateClient" method="post">
     <div class="form-group">
-        <input asp-for="Id"value="@Model.Id" style="display:none;" />
+        <input asp-for="Id" value="@Model.Id" style="display:none;" />
         <label>Enter Client Name:</label>
         <input asp-for="Name" value="@Model.Name" type="text" class="form-control">
         <span asp-validation-for="Name" style="color: red;"></span>
@@ -12,6 +12,17 @@
         <label>Enter Client Email:</label>
         <input asp-for="Email" value="@Model.Email" type="email" class="form-control">
         <span asp-validation-for="Email" style="color: red;"></span>
+    </div>
+    <br />
+    <div class="form-group">
+        <label>Enter Client Address:</label>
+        <input asp-for="Email" type="text" value="@Model.Address" class="form-control">
+    </div>
+    <br />
+    <div class="form-group">
+        <label>Enter Client Phone Number:</label>
+        <input asp-for="Email" type="number" value="@Model.PhoneNumber" class="form-control">
+        <span asp-validation-for="PhoneNumber" style="color: red;"></span>
     </div>
     <br />
     <button type="submit" class="btn btn-success">Update</button>
