--- a/ProjectManagement/Views/Clients/NewClient.cshtml
+++ b/ProjectManagement/Views/Clients/NewClient.cshtml
@@ -5,12 +5,21 @@
     <div class="form-group">
         <label>Enter Client Name:</label>
         <input asp-for="Name" type="text" class="form-control">
-         <span asp-validation-for="Name" style="color: red;"></span>
+        <span asp-validation-for="Name" style="color: red;"></span>
     </div>
     <div class="form-group">
         <label>Enter Client Email:</label>
         <input asp-for="Email" type="email" class="form-control">
         <span asp-validation-for="Email" style="color: red;"></span>
+    </div>
+    <div class="form-group">
+        <label>Enter Client Address:</label>
+        <input asp-for="Email" type="text" class="form-control">
+    </div>
+    <div class="form-group">
+        <label>Enter Client Phone Number:</label>
+        <input asp-for="Email" type="number" class="form-control">
+        <span asp-validation-for="PhoneNumber" style="color: red;"></span>
     </div>
     <br />
     <button type="submit" class="btn btn-success">Create</button>
