--- a/ProjectManagement/Views/Shared/_Layout.cshtml
+++ b/ProjectManagement/Views/Shared/_Layout.cshtml
@@ -55,17 +55,12 @@
             -->
             <div class="sidebar-wrapper">
                 <div class="logo">
-                    <a href="http://www.creative-tim.com" class="simple-text">
-                        Creative Tim
+                    <a href="#" class="simple-text">
+                       Eng Man
                     </a>
                 </div>
                 <ul class="nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" asp-controller="Home" asp-action="Index">
-                            <i class="nc-icon nc-chart-pie-35"></i>
-                            <p>Dashboard</p>
-                        </a>
-                    </li>
+                    
                     <li>
                         <a class="nav-link" asp-controller="Projects" asp-action="Index">
                             <i class="nc-icon nc-circle-09"></i>
@@ -110,7 +105,7 @@
             <nav class="navbar navbar-expand-lg " color-on-scroll="500">
 
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#pablo"> Dashboard </a>
+                    <a class="navbar-brand" asp-controller="Home" asp-action="Index" > Dashboard </a>
                     <button href="" class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-bar burger-lines"></span>
                         <span class="navbar-toggler-bar burger-lines"></span>
@@ -118,12 +113,7 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navigation">
                         <ul class="nav navbar-nav mr-auto">
-                            <li class="nav-item">
-                                <a asp-controller="Home" asp-action="Index" class="nav-link" data-toggle="dropdown">
-                                    <i class="nc-icon nc-palette"></i>
-                                    <span class="d-lg-none">Dashboard</span>
-                                </a>
-                            </li>
+                            
                             @*<li class="dropdown nav-item">
                                 <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
                                     <i class="nc-icon nc-planet"></i>
@@ -138,12 +128,7 @@
                                     <a class="dropdown-item" href="#">Another notification</a>
                                 </ul>
                             </li>*@
-                            <li class="nav-item">
-                                <a href="#" class="nav-link">
-                                    <i class="nc-icon nc-zoom-split"></i>
-                                    <span class="d-lg-block">&nbsp;Search</span>
-                                </a>
-                            </li>
+                            
                         </ul>
                         <ul class="navbar-nav ml-auto">
                             @*<li class="nav-item">
@@ -175,11 +160,11 @@
                 </div>
             </nav>
             <!-- End Navbar -->
-            <div class="container">
-                <main role="main" class="pb-3">
+            @*<div class="container">*@
+                <main role="main" class="pb-3 p-3">
                     @RenderBody()
                 </main>
-            </div>
+            @*</div>*@
 
             <footer class="footer">
                 <div class="container-fluid">
